# azure-functions-spin

./: .gitignore  README.md  host.json
spin-in-func/: Cargo.toml  spin.toml
spin-in-func/src/: lib.rs
