[package]
name = "spin-in-func"
authors = ["Kai Walter <kai.walter@outlook.de>"]
description = "Test Spin in Azure Functions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"

[workspace]
